--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: This is not robotic
 <div class="center">
     <h2>Posts</h2>
     <ul class="posts">
-        {% for post in site.posts %}
+        {% for post in site.posts reversed %}
             <li><span>{{ post.date | date_to_string }}</span> / <a href="{{ post.url }}">{{ post.title }}</a> / <span class="tags">{{ post.tags | join: ",&nbsp;" }}</span></li>
         {% endfor %}
     </ul>
