fixed all of the mistakes

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@ title: This is not robotic
             <li><span>{{ post.date | date_to_string }}</span> / <a href="{{ post.url }}">{{ post.title }}</a> / <span class="tags">{{ post.tags | join: ",&nbsp;" }}</span></li>
         {% endfor %}
     </ul>
+    <h2>Talks</h2>
+    <ul class="posts">
+    	<li><span>February 20, 2012</span> / <a href="/talks/2013-02-20-wpgalaxy.html">Baltimore PHP: The WordPress Hacker's Guide to the \Galaxy()</a></li>
+    </ul>
 </div>
 </div>
