Changed index file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ title: This is not robotic
     </ul>
     <h2>Talks</h2>
     <ul class="posts">
+        <li><span>March 3, 2012</span> / <a href="/talks/2013-03-02-wpgalaxy.html">MidwestPHP: The WordPress Hacker's Guide to the \Galaxy()</a></li>
     	<li><span>February 20, 2012</span> / <a href="/talks/2013-02-20-wpgalaxy.html">Baltimore PHP: The WordPress Hacker's Guide to the \Galaxy()</a></li>
     </ul>
 </div>
