--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@ title: This is not robotic
     <h2>Posts</h2>
     <ul class="posts">
         {% for post in site.posts %}
-            <li><span>{{ post.date | date_to_string }}</span> / <a href="{{ post.url }}">{{ post.title }}</a> / <span class="tags">{{ post.tags | join: ",&nbsp;" }}</span></li>
+            <li><a href="{{ post.url }}">{{ post.title }}</a> <small> / {{ post.date | date_to_string }}</small><br>{% if post.subtitle %}<small style='color:#666;'>{{ post.subtitle }} / </small>{% endif %}<span class="tags">Tagged: {{ post.tags | join: ",&nbsp;" }}</span><br></li>
         {% endfor %}
     </ul>
     <h2>Talks</h2>
     <ul class="posts">
-        <li><span>March 3, 2012</span> / <a href="/talks/2013-03-02-wpgalaxy.html">MidwestPHP: The WordPress Hacker's Guide to the \Galaxy()</a></li>
-    	<li><span>February 20, 2012</span> / <a href="/talks/2013-02-20-wpgalaxy.html">Baltimore PHP: The WordPress Hacker's Guide to the \Galaxy()</a></li>
+        <li><a href="https://speakerdeck.com/jasonrhodes/rip-wysiwyg">RIP WYSIWYG</a><small> / @ Digital360 / 5 Mar 2013</small></li>
+        <li><a href="/talks/2013-03-02-wpgalaxy.html">The WordPress Hacker's Guide to the \Galaxy()</a><small> / @ MidwestPHP / 3 Mar 2013</small></li>
+    	<li><a href="/talks/2013-02-20-wpgalaxy.html">The WordPress Hacker's Guide to the \Galaxy()</a><small> / @ BaltimorePHP / 20 Feb 2013</small></li>
     </ul>
 </div>
 </div>
