Added tutorial to index

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ title: This is not robotic
             <li><a href="{{ post.url }}">{{ post.title }}</a> <small> / {{ post.date | date_to_string }}</small><br>{% if post.subtitle %}<small style='color:#666;'>{{ post.subtitle }} / </small>{% endif %}<span class="tags">Tagged: {{ post.tags | join: ",&nbsp;" }}</span><br></li>
         {% endfor %}
     </ul>
-    <h2>Talks</h2>
+    <h2>Talks and Tutorials</h2>
     <ul class="posts">
+        <li><a href="https://tutsplus.com/course/wordpress-hackers-guide-to-the-galaxy/">Tuts+ Premium video course on advanced WordPress</a><small> / @Tuts+ / 15 Oct 2013</small></li>
         <li><a href="https://speakerdeck.com/jasonrhodes/rip-wysiwyg">RIP WYSIWYG</a><small> / @ Digital360 / 5 Mar 2013</small></li>
         <li><a href="/talks/2013-03-02-wpgalaxy.html">The WordPress Hacker's Guide to the \Galaxy()</a><small> / @ MidwestPHP / 3 Mar 2013</small></li>
     	<li><a href="/talks/2013-02-20-wpgalaxy.html">The WordPress Hacker's Guide to the \Galaxy()</a><small> / @ BaltimorePHP / 20 Feb 2013</small></li>
