Publishing the site

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <body>
     <div class="container page-container">
 
-<h2 id="rhodes-plus-jason-dot-com">rhodes plus jason dot com</h2>
+<h1 id="rhodes-plus-jason-dot-com">rhodes plus jason dot com</h1>
 <p>This is a site thing.</p>
+<p>It should have things.</p>
 
     </div>
     <script src="/assets/site.js"></script>
