Publishing the site

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header><span class="logo">rhodesjasondotcom</span><span class="nav"><a href="/">home</a>
         <sep>| </sep><a href="/blog">blog</a></span></header>
     <div class="container home-container"><p>Hi, I&#39;m Jason, and this is my HTML web site.</p>
+<p><img src="/assets/images/rhodesjason-01-glitched.square.256.png" alt="Jason profile"></p>
 <p>I used to play with HyperCard a lot during middle school classes and now I write java scripts during basically all the different times. Some things a person could know:</p>
 <ul>
 <li>I live in Baltimore, MD</li>
