Publishing the site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>rhodesjason dot com</title>
     <meta name="description" content="A site for a rhodesjason">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/assets/images/hypercard.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,900,400italic">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic">
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -23,6 +24,7 @@
 <li>I love contributing to open source as <a href="http://github.com/jasonrhodes">github/jasonrhodes</a></li>
 <li>I organize <a href="http://nodeschool.io/baltimore">Baltimore NodeSchool</a></li>
 <li>I make educational video series for <a href="http://tutsplus.com/authors/jason-rhodes">tutsplus.com</a></li>
+<li>I&#39;ve given <a href="https://speakerdeck.com/rhodesjason">some talks</a></li>
 </ul>
 
     </div>
