Publishing the site

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container home-container">
       <div class="home-intro"><img src="/assets/images/rhodesjason-01-glitched.square.256.png" alt="Jason profile shot" class="home-intro-pic">
         <div class="home-intro-text">
-          <marquee scrollamount="15">Hi, I'm Jason, and this is my HTML web site. ✌ ⚾ 🚀 ⌚ 🃏</marquee>
+          <marquee scrollamount="15">Hi, I'm Jason, and this is my HTML web site. ✌ 🚀 ⚾ ⏳ 🃏</marquee>
         </div>
       </div>
       <div class="home-about col half">
