Publishing the site

--- a/g/index.html
+++ b/g/index.html
@@ -1,1 +1,1 @@
-<h1>/g index</h1><ul><a href="nicethrow.gif">nicethrow.gif</a></ul>
+<h1>/g index</h1><ul><li><a href="nicethrow.gif">nicethrow.gif</a></li></ul>
