--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/assets/images/hypercard.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,100" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" type="text/css">
+    <link rel="stylesheet" href="/assets/css/hljs/tomorrow-night.css">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,7 +23,7 @@ ga('send', 'pageview');
   <body>
     <header><a href="/" class="logo">rhodesjasondotcom</a><span class="nav"><a href="/">home</a>
         <sep> | </sep><a href="/blog">blog</a>
-        <sep> | </sep><a href="http://speakerdeck.com/rhodesjason">slides</a></span></header>
+        <sep> | </sep><a href="http://speakerdeck.com/rhodesjason">slides</a></span><img src="/assets/images/rhodesjason-01-glitched.square.256.png" class="avatar"></header>
     <div class="container page-container"><h1 id="about-me">About me</h1>
 <p>I&#39;m Jason. I used to play with HyperCard a lot during middle school classes and now I write java scripts during work. Some things:</p>
 <ul>
