Publishing the site

--- a/index.html
+++ b/index.html
@@ -26,25 +26,21 @@ ga('send', 'pageview');
         <sep> | </sep><a href="http://speakerdeck.com/rhodesjason">slides</a></span><img src="/assets/images/rhodesjason-01-glitched.square.256.png" class="avatar"></header>
     <div class="container home-container">
       <div class="home-about col half">
-        <h3 class="home-section-header">about me</h3><p>I used to play with HyperCard a lot during middle school classes and now I write java scripts during basically all the different times.</p>
+        <h3 class="home-section-header">about me</h3><p>I used to play with HyperCard a lot during middle school classes and now I write java scripts for money and watch movies for fun.</p>
 <p>Some things a person could know:</p>
 <ul>
-<li>I live in Baltimore, MD</li>
-<li>I work for <a href="https://www.elastic.co">Elastic</a></li>
-<li>I write words on twitter as <a href="http://twitter.com/rhodesjason">@rhodesjason</a></li>
-<li>I do open sourcey things at <a href="http://github.com/jasonrhodes">github/jasonrhodes</a></li>
+<li>I live in Maryland, near Washington DC</li>
+<li>I&#39;ve worked in web dev and software engineering for more than 15 years</li>
+<li>I currently work at <a href="https://www.elastic.co">Elastic</a></li>
+<li>I log too many movies on Letterboxd as <a href="https://letterboxd.com/rhodesjason/">@rhodesjason</a></li>
+<li>I write words on Bluesky as <a href="https://bsky.app/profile/jasonrhodes.bsky.social">@jasonrhodes</a></li>
+<li>I store all of my terrible code at <a href="http://github.com/jasonrhodes">github/jasonrhodes</a></li>
 <li>I created/organized <a href="http://nodeschool.io/baltimore">Baltimore NodeSchool</a></li>
-<li>I created/organized <a href="http://charmcityjs.com">charmCityJs</a></li>
+<li>I created/organized <a href="https://www.meetup.com/charmcityjs/">charmCityJs</a></li>
 <li>I made a few educational video series for <a href="http://tutsplus.com/authors/jason-rhodes">tutsplus.com</a></li>
 <li>I&#39;ve given <a href="https://speakerdeck.com/rhodesjason">some talks, with slides</a></li>
 </ul>
 
-        <h3 class="home-section-header">events</h3>
-        <ul>
-          <li> <a href="http://charmcityjs.com">charmCityJs</a><span>: every first wednesday at 7pm</span></li>
-          <li><a href="http://nodeschool.io/baltimore">nodeschool</a><span>: returning this december!</span></li>
-          <li>Refresh Baltimore: i'm speaking this november</li>
-        </ul>
       </div>
       <div class="home-recent-posts col half end">
         <h3 class="home-section-header">some blog posts</h3>
