Publishing the site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ ga('send', 'pageview');
         <sep> | </sep><a href="http://speakerdeck.com/rhodesjason">slides</a></span><img src="/assets/images/rhodesjason-01-glitched.square.256.png" class="avatar"></header>
     <div class="container home-container">
       <div class="home-about col half">
-        <h3 class="home-section-header">about me</h3><p>I used to play with HyperCard a lot during middle school classes and now I write java scripts for money and watch movies for fun.</p>
+        <h3 class="home-section-header">about me</h3><p>I used to play with HyperCard during middle school classes. Now I write java scripts for money and watch movies for fun.</p>
 <p>Some things a person could know:</p>
 <ul>
 <li>I live in Maryland, near Washington DC</li>
