Adds After Watching link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li>I&#39;ve worked in web dev and software engineering for more than 15 years</li>
           <li>I currently work at <a href="https://www.elastic.co">Elastic</a></li>
           <li>I log too many movies on Letterboxd as <a href="https://letterboxd.com/rhodesjason/">@rhodesjason</a></li>
+          <li>I have a Substack where I write and edit posts about movies and culture, called <a href="https://afterwatching.substack.com">After Watching</a></li>
           <li>I write words on Bluesky as <a href="https://bsky.app/profile/jasonrhodes.bsky.social">@jasonrhodes</a></li>
           <li>I store all of my terrible code at <a href="http://github.com/jasonrhodes">github/jasonrhodes</a></li>
           <li>I created/organized <a href="http://nodeschool.io/baltimore">Baltimore NodeSchool</a></li>
